--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 
 <div class="text-center">
   <h1>Maaf, halaman yang kamu cari ternyata tidak ada.</h1>
-  <h1>Silakan kembali ke [halaman utama]({{ site.baseurl }}. (404 error)</h1>
+  <h1>Silakan kembali ke [halaman utama]({{ site.baseurl }}). (404 error)</h1>
   <br/>
 
   <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
