--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@ permalink: /404.html
 
 <div class="text-center">
   <h1>Maaf, halaman yang kamu cari ternyata tidak ada.</h1>
-  <h1>Silakan kembali ke [halaman utama]({{ site.baseurl }}). (404 error)</h1>
+  <h1>Silakan kembali ke <a href="{{ 'site.baseurl' | relative_url }}">halaman utama.</a> (404 error)</h1>
   <br/>
 
-  <img src="{{ 'assets/img/404-southpark.jpg' | relative_url }}" alt="Not found" />
+  <img src="{{ 'assets/img/404-stop-it-now.png' | relative_url }}" alt="Not found" />
 </div>
